MIFOSX-1468 - Added field 'Joining Date' for Staff

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -13703,7 +13703,10 @@ Request Body:
     "isLoanOfficer": "true",
     "externalId": "17H",
     "mobileNo": "+353851239876",
-    "isActive": "true"
+    "isActive": "true",
+	"joiningDate": "01 January 2009",
+	"locale":"en",
+	"dateFormat":"dd MMMM yyyy"
 }
 					</code>
 					<code class="method-response">
@@ -13738,7 +13741,8 @@ GET https://DomainName/api/v1/staff
         "officeName": "Head Office",
         "isLoanOfficer": true,
 	"externalId": "17H",
-	"isActive": "true"
+	"isActive": "true",
+	    "joiningDate":[2009,8,1]
     }
 ]
 					</code>
@@ -13765,7 +13769,8 @@ GET https://DomainName/api/v1/staff
     "officeName": "Head Office",
     "isLoanOfficer": true,
     "externalId": "17H",
-    "isActive": "true"
+    "isActive": "true",
+	"joiningDate":[2009,8,1]
 }
 					</code>
 				</div>
@@ -13794,7 +13799,8 @@ GET https://DomainName/api/v1/staff
     "officeName": "Head Office",
     "isLoanOfficer": true,
     "externalId": "17H",
-    "isActive": "true"
+    "isActive": "true",
+	"joiningDate":[2009,8,1]
 }
 					</code>
 				</div>
